<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#00B2FF"
	android:orientation="vertical"
    tools:context=".SplashActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/splash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingBottom="50dp"
        android:gravity="center|bottom" >
        
    	<TextView
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:gravity="center"
    	    android:text="@string/app_name"
    	    android:textSize="30sp"
    	    android:textColor="#FFFFFF"
    	    android:textStyle="bold" />
        
    	<TextView
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:padding="10dp"
    	    android:gravity="center"
    	    android:text="@string/version"
    	    android:textColor="#FFFFFF"
    	    android:textStyle="bold" />
        
    	<TextView
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:padding="5dp"
    	    android:gravity="center"
    	    android:text="@string/developer"
    	    android:textColor="#FFFFFF"
    	    android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
